# dependency-checker

./: README.md  original-requirements.txt  requirements-detailed.txt  requirements.txt
.github/workflows/: dependency_check.yml  dependency_check_uv.yml  enhanced_check_uv.yml
dependency_reports/20250312_002200_run_13800838712/: dependencies_py3.10.txt  metadata.txt
dependency_reports/20250312_003447_run_13801019553/: dependencies_py3.11.txt  dependency_tree_py3.11.txt  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_005542_run_13801276984/: dependency_tree_py3.11.txt  error_log.txt  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_005830_run_13801310219/: dependencies_py3.11.txt  dependency_tree_py3.11.txt  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_010441_run_13801384416/: install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_013009_run_13801693855/: dependency_issues.md  error_log.txt  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_013837_run_13801796319/: dependency_issues.md  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_014237_run_13801843788/: dependency_issues.md  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_014728_run_13801900894/: dependency_issues.md  install_output.txt  metadata.txt  sync_output.txt
dependency_reports/20250312_015020_run_13801935600/: dependency_issues.md  metadata.txt  (+2 more)
dependency_reports/20250313_004222_run_13824421937/: dependency_tree.txt  pyproject.toml  requirements-frozen.txt  requirements.in  requirements.txt  summary.md
dependency_reports/20250313_005628_run_13824600466/: pyproject.toml  summary.md
(+597 files in other folders)
