[project]
name = "dependency-check"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "transformers",
    "vertexai",
    "google-genai",
    "google-cloud-documentai",
    "google-cloud-storage",
    "llama-index",
    "llama-index-llms-langchain",
    "llama-index-llms-openai-like",
    "llama-index-multi-modal-llms-openai",
    "llama-index-readers-llama-parse",
    "llama-index-readers-file",
    "llama-index-retrievers-bm25",
    "llama-index-vector-stores-elasticsearch",
    "llama-index-vector-stores-faiss",
    "llama-index-embeddings-vertex",
    "llama-index-embeddings-google",
    "llama-index-llms-vertex",
    "llama-index-llms-gemini",
    "llama-index-indices-managed-vertexai",
    "llama-index-retrievers-vertexai-search",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-elasticsearch",
    "langchain-google-vertexai",
    "langchain-google-genai",
    "langchain-google-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "instructor",
    "outlines~=0.1.14",
    "deepeval~=2.4.1",
    "faiss-cpu",
    "evaluate",
    "pytest",
    "jupyterlab",
    "jupyterlab-widgets",
    "ipython",
    "jupyter-server",
]
